--- a/.github/workflows/java.yml
+++ b/.github/workflows/java.yml
@@ -1,4 +1,4 @@
-name: OpenJDK 17
+name: OpenJDK build
 on:
   push:
     branches: [ master ]
@@ -9,15 +9,10 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - run: |
-          download_url="https://download.java.net/java/GA/jdk17.0.1/2a2082e5a09d4267845be086888add4f/12/GPL/openjdk-17.0.1_linux-x64_bin.tar.gz"
-          wget -O $RUNNER_TEMP/java_package.tar.gz $download_url
       - uses: actions/checkout@v2
-      - uses: actions/setup-java@v2
+      - uses: oracle-actions/setup-java@v1
         with:
-          distribution: 'jdkfile'
-          jdkFile: ${{ runner.temp }}/java_package.tar.gz
-          java-version: '17'
-          architecture: x64
+          website: jdk.java.net
+          release: 18
       - run: mvn clean compile assembly:single
       - run: java -jar target/api-1.0.jar
